--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -25,38 +26,39 @@
     </div>
   </nav>
   
-    <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
+  <div class="card border-0" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        <p class="text-justify" style="max-width:80%;">Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.</p>
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+  <div class="card border-0" style="width: 30%;">
+        <img class="card-img-top" src="/static/person1.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">John Adams</p>
+          <p class="text-center"><strong>Sales Manager</strong></p>
+          <p class="card-text text-justify">John Adams excels in helping clients find their perfect car.</p>
+          <p>jadams@dreams.com</p>
         </div>
       </div>
 
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+  <div class="card border-0" style="width: 30%;">
+        <img class="card-img-top" src="/static/person2.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Jim Smith</p>
+          <p class="text-center"><strong>Finance Specialist</strong></p>
+          <p class="card-text text-justify">Jim Smith simplifies auto financing, making it quick and stress-free.</p>
+          <p>jsmith@dreams.com</p>
         </div>
       </div>
 
-      <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+  <div class="card border-0" style="width: 30%;">
+        <img class="card-img-top" src="/static/person3.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Mary Jones</p>
+          <p class="text-center"><strong>Service Advisor</strong></p>
+          <p class="card-text text-justify">Mary Jones provides top-notch service advice and vehicle maintenance tips.</p>
+          <p>mjones@dreams.com</p>
         </div>
       </div>
     </div>
